AESTHETICS: fix spacing on mobile where image was

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,11 +18,22 @@ a {
 }
 
 .nav-link {
-  color: "#FEF1C3";
+  color: #fef1c3;
+}
+
+.body-title {
+  font-size: 34px;
+  font-weight: bold;
+  color: #d39bff;
+  margin-bottom: 32px;
+  font-family: system-ui;
 }
 
 .body-text {
   font-weight: 400 !important;
+  font-size: 18px;
+  color: white;
+  font-family: system-ui;
 }
 
 * {
